--- a/going-out_experiment1_plots.Rmd
+++ b/going-out_experiment1_plots.Rmd
@@ -19,16 +19,20 @@ dataExp1 <-
   mutate(CommunicationNumeric =
            ifelse(
              Communication == "Imperative",
-             2,
-             ifelse(Communication == "Personal Responsibility", 3, 1)
+             3,
+             ifelse(Communication == "Personal Responsibility", 2, 1)
            ),
-         VAS = VAS/100)
+         Communication = factor(Communication, levels = c(
+           "Imperative",
+           "Personal Responsibility",
+           "Control"
+         )))
 
 # The palette with black:
 cbbPalette <- c(
-  "#000000",
   "#E69F00",
   "#56B4E9",
+  "#000000",
   "#009E73",
   "#F0E442",
   "#0072B2",
@@ -40,62 +44,142 @@ cbbPaletteBoxPlots <- c("#E69F00","#56B4E9","#000000")
 w = 6
 h = 4
 
-
 #################33 Density plot of VAS per group
-a <- ggplot(dataExp1 %>% filter(Perspective == "Personal", Risk == "High Risk"), 
-       aes(x = VAS, fill = Communication)) +
+a <- ggplot(
+  dataExp1 %>%
+    filter(Perspective == "Personal", Risk == "High Risk"),
+  aes(x = VAS, fill = Communication)
+) +
   geom_density(alpha = 0.4) +
-  geom_boxplot(aes(x = VAS, y = CommunicationNumeric * -0.0015 + 0.05), 
-               alpha = .4, colour = "black",
-               notch = TRUE, coef = 1 ) +
-  labs(title = "High Risk, Self Framing") + 
-  labs(x = "Permissiveness", y = "Density") +
+  geom_boxplot(
+    aes(x = VAS, y = CommunicationNumeric * 0.15 - 0.55),
+    alpha = .4,
+    colour = "black",
+    notch = TRUE,
+    outlier.alpha = .4,
+    outlier.size = 1,
+  ) +
+  labs(title = "High Risk, Self Framing",
+       x = "Permissiveness", 
+       y = "Density") +
+  lims(y = c(-.6, 5.7)) + 
+  scale_fill_manual(values = cbbPalette[c(1,2,9)]) +
   theme_light()
 
-b <- ggplot(dataExp1 %>% filter(Perspective == "Personal", Risk == "Low Risk"), 
-       aes(x = VAS, fill = Communication)) +
+b <-
+  ggplot(
+    dataExp1 %>% filter(Perspective == "Personal", Risk == "Low Risk"),
+    aes(x = VAS, fill = Communication)
+  ) +
   geom_density(alpha = 0.4) +
-  geom_boxplot(aes(x = VAS, y = CommunicationNumeric * -0.0015 + 0.05), alpha = .4, colour = "black", notch = TRUE, coef = 1 ) +
-labs(title = "Low Risk, Self Framing") + ylab("") + xlab("Permissiveness") +
+    geom_boxplot(
+    aes(x = VAS, y = CommunicationNumeric * 0.15 - 0.55),
+    alpha = .4,
+    colour = "black",
+    notch = TRUE,
+    outlier.alpha = .4,
+    outlier.size = 1,
+  ) +
+  labs(title = "Low Risk, Self Framing", 
+       x = "Permissiveness") +
+  lims(y = c(-.6, 5.7)) + 
+  scale_fill_manual(values = cbbPalette[c(1,2,9)]) +
+  theme_light() +
+  theme(axis.title.y = element_blank())
+
+c <-
+  ggplot(
+    dataExp1 %>% filter(Perspective == "Personal", Risk == "Minimal Risk"),
+    aes(x = VAS, fill = Communication)
+  ) +
+  geom_density(alpha = 0.4) +
+    geom_boxplot(
+    aes(x = VAS, y = CommunicationNumeric * 0.15 - 0.55),
+    alpha = .4,
+    colour = "black",
+    notch = TRUE,
+    outlier.alpha = .4,
+    outlier.size = 1,
+  ) +
+  scale_fill_manual(values = cbbPalette[c(1,2,9)]) +
+  labs(title = "Minimal Risk, Self Framing", 
+       x = "Permissiveness") +
+  lims(y = c(-.6, 5.7)) + 
+  theme_light() +
+  theme(axis.title.y = element_blank())
+
+d <-
+  ggplot(
+    dataExp1 %>% filter(Perspective == "General", Risk == "High Risk"),
+    aes(x = VAS, fill = Communication)
+  ) +
+  geom_density(alpha = 0.4) +
+    geom_boxplot(
+    aes(x = VAS, y = CommunicationNumeric * 0.15 - 0.55),
+    alpha = .4,
+    colour = "black",
+    notch = TRUE,
+    outlier.alpha = .4,
+    outlier.size = 1,
+  ) +
+  labs(title = "High Risk, Other Framing", 
+       y = "Density", 
+       x = "Permissiveness") +
+  lims(y = c(-.6, 5.7)) + 
+  scale_fill_manual(values = cbbPalette[c(1,2,9)]) +
   theme_light()
 
-c <- ggplot(dataExp1 %>% filter(Perspective == "Personal", Risk == "Minimal Risk"),
-       aes(x = VAS, fill = Communication)) + 
+e <-
+  ggplot(
+    dataExp1 %>% filter(Perspective == "General", Risk == "Low Risk"),
+    aes(x = VAS, fill = Communication)
+  ) +
   geom_density(alpha = 0.4) +
-  geom_boxplot(aes(x = VAS, y = CommunicationNumeric * -0.0015 + 0.05), alpha = .4, colour = "black", notch = TRUE, coef = 1 ) +
-  labs(title = "Minimal Risk, Self Framing") + ylab("") + xlab("Permissiveness") +
-  theme_light()
+    geom_boxplot(
+    aes(x = VAS, y = CommunicationNumeric * 0.15 - 0.55),
+    alpha = .4,
+    colour = "black",
+    notch = TRUE,
+    outlier.alpha = .4,
+    outlier.size = 1,
+  ) +
+  labs(title = "Low Risk, Other Framing", 
+       x = "Permissiveness") +
+  lims(y = c(-.6, 5.7)) + 
+  scale_fill_manual(values = cbbPalette[c(1,2,9)]) +
+  theme_light() +
+  theme(axis.title.y = element_blank())
 
-d <- ggplot(dataExp1 %>% filter(Perspective == "General", Risk == "High Risk"), 
-       aes(x = VAS, fill = Communication)) +
+f <-
+  ggplot(
+    dataExp1 %>% filter(Perspective == "General", Risk == "Minimal Risk"),
+    aes(x = VAS, fill = Communication)
+  ) +
   geom_density(alpha = 0.4) +
-  geom_boxplot(aes(x = VAS, y = CommunicationNumeric * -0.0015 + 0.05), alpha = .4, colour = "black", notch = TRUE, coef = 1 ) +
-  labs(title = "High Risk, Other Framing") + ylab("Density") + xlab("Permissiveness") +
-  theme_light()
-
-e <- ggplot(dataExp1 %>% filter(Perspective == "General", Risk == "Low Risk"), 
-       aes(x = VAS, fill = Communication)) +
-  geom_density(alpha = 0.4) +
-  geom_boxplot(aes(x = VAS, y = CommunicationNumeric * -0.0015 + 0.05), alpha = .4, colour = "black", notch = TRUE, coef = 1 ) +
-  labs(title = "Low Risk, Other Framing") + ylab("") + xlab("Permissiveness") +
-  theme_light()
-
-f <- ggplot(dataExp1 %>% filter(Perspective == "General", Risk == "Minimal Risk"), 
-       aes(x = VAS, fill = Communication)) +
-  geom_density(alpha = 0.4) +
-  geom_boxplot(aes(x = VAS, y = CommunicationNumeric * -0.0015 + 0.05), alpha = .4, colour = "black", notch = TRUE, coef = 1 ) +
-  labs(title = "Minimal Risk, Other Framing") + ylab("") + xlab("Permissiveness") +
-  theme_light()
+    geom_boxplot(
+    aes(x = VAS, y = CommunicationNumeric * 0.15 - 0.55),
+    alpha = .4,
+    colour = "black",
+    notch = TRUE,
+    outlier.alpha = .4,
+    outlier.size = 1,
+  ) +
+  labs(title = "Minimal Risk, Other Framing", x = "Permissiveness") +
+  lims(y = c(-.6, 5.7)) + 
+  scale_fill_manual(values = cbbPalette[c(1,2,9)]) +
+  theme_light() +
+  theme(axis.title.y = element_blank())
 
 
 DensityPlots <- ggarrange(a, b, c, d, e, f ,
-                          labels = c("A", "B", "C", "D", "E", "F"), 
                           nrow = 2, ncol = 3, 
                           common.legend = TRUE, legend = "bottom")
-ggsave("./figures/DensityPlot.png", width = 3*w, height = 2.5*h) 
+ggsave("./figures/DensityPlot.png", width = 2.25*w, height = 1.875*h) 
 
 DensityPlots
+```
 
+```{r plots contd}
 ################################################## Box Plots
 
 
@@ -137,7 +221,7 @@ boxRisk <-
     "text",
     x = c(-.035, -.035, -.09),
     y = c(1.75, 2.75, 2.25),
-    label = "***",
+    label = "**",
     angle = 90,
     size = 7
   ) +
@@ -182,18 +266,18 @@ boxComm <-
   ) +
   annotate(
     "text",
-    x = c(-.035, -.055, -.09),
+    x = c(-.055, -.07, -.09),
     y = c(1.75, 2.75, 2.25),
-    label = c("*", "n.s.", "**"),
+    label = c("n.s.", ".", "*"),
     angle = 90,
-    size = c(7, 5, 7)
+    size = c(5, 9, 7)
   ) +
   labs(title = "Permissiveness by Communication Style") +
   xlab("Permissiveness") + 
   ylab("Communication Style") +
   xlim(-.1, 1.005) +
   guides(fill = guide_legend("Communication", reverse = T)) +
-  scale_fill_manual(values = cbbPalette[c(9, 3, 2)]) +
+  scale_fill_manual(values = cbbPalette[c(9, 2, 1)]) +
   labs(tag = "1B") +
   theme_light() +
   theme(axis.text.y = element_blank())
